// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PokemonPaged Debe de hacer match co el snapshot cuando cargan los pokemons 1`] = `
<div>
  <h1>¿Quién es ese Pokémon?</h1>
  <pokemon-picture-stub pokemonid="1" showpokemon="false" data-test="picture"></pokemon-picture-stub>
  <pokemon-option-stub pokemons="[object Object],[object Object],[object Object],[object Object]" data-test="options"></pokemon-option-stub>
  <!--v-if-->
</div>
`;

exports[`PokemonPaged debe de hacer match con el snapshot 1`] = `
<div>
  <h1>¿Quién es ese Pokémon?</h1>
  <pokemon-picture-stub showpokemon="false" data-test="picture"></pokemon-picture-stub>
  <pokemon-option-stub pokemons="" data-test="options"></pokemon-option-stub>
  <!--v-if-->
</div>
`;
